--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,235 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+*:focus{
+  outline: none;
 }
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+.header-wrapper{
+  display: flex;
+  justify-content: space-between;
 }
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+.header-wrapper ul{
+  display: flex;
 }
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.header-wrapper ul li{
+  list-style-type: none;
+  padding: 5px;
 }
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-a {
-  color: inherit;
+.header-wrapper ul li a{
   text-decoration: none;
 }
+.header-wrapper ul li button{
+  background-color: transparent;
+  border: none;
+  color: blueviolet;
+  font-size: 16px;
+  cursor: pointer;
+}
+.footer-wrapper{
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+  font-size: 10px;
+  background-color: #fff;
+}
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+
+.input-wrapper{
+  margin: 10px;
+}
+.input-field{
+  width: 200px;
+  height: 30px;
+}
+.button{
+  width: 200px;
+  height: 30px;
+}
+.container{
+  text-align: center;
+}
+.button-link{
+  border: none;
+  cursor: pointer;
+  background-color: transparent;
+  color: skyblue;
+  margin: 20px;
+}
+.input-error {
+  position: absolute;
+  padding: 8px;
+  color: red;
+  font-size: 13px;
+}
+table, th, td{
+  border: 1px solid #000 ;
+  border-collapse: collapse;
+  padding: 10px;
+}
+table td button{
+  margin: 5px;
+}
+table img {
+  width: 80px;
+}
+.main-page-banner, .restaurant-page-banner{
+  background-image: url("https://png.pngtree.com/background/20231101/original/pngtree-3d-rendered-interface-for-a-homemade-food-app-picture-image_5830862.jpg");
+  background-color: rgb(0, 0, 0, 0.6);
+  background-blend-mode: multiply;
+  padding: 30px;
+  height: 230px;
+  color: white;
+  text-align: center;
+}
+.main-page-banner .input-wrapper{
+  background-color: #fff;
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  margin: auto;
+  width: 60%;
+}
+.main-page-banner .select-input{
+  height: 40px;
+  border: none;
+  width: 25%;
+  padding-left: 15px;
+}
+.main-page-banner .search-input{
+  height: 40px;
+  border: none;
+  width: 45%;
+  border-left: 1px solid #ccc;
+  padding-left: 15px;
+}
+.location-list{
+  color: #000;
+  list-style-type: none;
+  text-align: left;
+  position: absolute;
+  background-color: #fff;
+  padding: 0;
+  margin: 0;
+  margin-left: -5px;
+  border: 1px solid #ccc;
+}
+.location-list li{
+  width: 180px;
+  padding: 5px;
+  border-bottom: 1px solid #ccc;
+  cursor: pointer;
+}
+.restaurant-list-container{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-top: 40px;
+  margin-bottom: 50px;
+}
+.restaurant-wrapper{
+  width: 45%;
+  background-color: orange;
+  margin: 10px;
+  padding: 10px;
+  border: 1px solid #aaa;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.restaurant-wrapper .heading-wrapper, .restaurant-wrapper .address-wrapper{
+  padding-left: 15px;
+  display: flex;
+  justify-content: flex-start;
+}
+.restaurant-wrapper h5{
+  margin-left: 15px;
+}
+.restaurant-wrapper .address{
+  margin-left: 5px;
+}
+.restaurant-page-banner h1{
+  font-size: 65px;
+}
+.detail-wrapper{
+  display: flex;
+  background-color: orange;
+}
+.detail-wrapper h4{
+  width: 50%;
+}
+.food-item-wrapper{
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+.food-item-wrapper .list-item{
+  color: orange;
+  font-weight: bold;
+  border-bottom: 1px solid orange;
+  padding: 20px;
+  display: flex;
+  text-transform: capitalize;
+  align-items: center;
+  gap: 20px;
+
+}
+.food-item-wrapper .list-item button{
+  color: #fff;
+  border: none;
+  background-color: orange;
+  padding: 5px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.food-item-wrapper .list-item img{
+  width: 100px;
+}
+.food-item-wrapper .list-item .description{
+  font-weight: lighter;
+}
+.list-item-block-1{
+  width: 20%;
+}
+.list-item-block-2{
+  width: 80%;
+}
+.list-item-block-3{
+  width: 20%;
+
+}
+.total-wrapper{
+  display: flex;
+  flex-wrap: wrap;
+  border-bottom: 1px solid orange;
+  padding-bottom: 20px;
+}
+.total-wrapper .row{
+  display: flex;
+  justify-content: space-between;
+  margin-left: 20%;
+  margin-right: 20%;
+  font-size: 20px;
+  font-weight: bold;
+  color: orange;
+}
+.total-wrapper .block-1{
+  width: 70%;
+}
+.total-wrapper .block-2{
+  width: 30%;
+}
+.total-wrapper .block-2 button{
+  padding: 10px 25px;
+  border: navajowhite;
+  background-color: orange;
+  color: #fff;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.auth-container{
+  display: flex;
+}
+.login-wrapper, .signup-wrapper{
+  height: 400px;
+  border: 1px solid #ccc;
+  margin: 50px;
+  padding: 30px;
+  width: 50%;
+  text-align: center;
 }
